# bevy-events-poc

./: Cargo.toml  README.md
.cargo/: config.toml
bevy_egui-main/: .gitignore  Cargo.toml
bevy_egui-main/examples/: color_test.rs  paint_callback.rs  render_egui_to_image.rs  render_to_image_widget.rs  two_windows.rs  ui.rs
bevy_egui-main/src/: helpers.rs  input.rs  lib.rs  output.rs  picking.rs
bevy_egui-main/src/render/: mod.rs  render_pass.rs  systems.rs
src/: main.rs  person_resource.rs
src/events/: change_color.rs  change_counter.rs  change_location.rs  change_name.rs  events.rs  events_macro.rs  grow_older.rs  mod.rs
